be/fix : 도메인 구독 상태 response에 추가